--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
         <p>{{'home.iAmDeveloper' | translate}} <span class="typed"></span></p>
     </div> -->
 <!-- </section> -->
+
 <header id="home" class="header">
     <div class="overlay"></div>
     <div class="header-content container">
@@ -11,7 +12,22 @@
             <span class="up">Hello...!!</span>
             <span class="down">I am Vignesh</span>
         </h1>
-        <p class="header-subtitle" style="margin-top: 10px;" >FULLSTACK WEB DEVELOPER</p>
+        <p class="header-subtitle" style="margin-top: 10px;">FULLSTACK WEB DEVELOPER</p>
         <!-- <button class="btn btn-primary">Visit My Works</button> -->
     </div>
+    <section class="sticky">
+        <div class="bubbles">
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+
+        </div>
+    </section>
 </header>
