--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
     <app-home></app-home>
     <app-about></app-about>
     <app-skills></app-skills>
@@ -8,6 +8,7 @@
     <!-- <app-references></app-references> -->
     <app-contact></app-contact>
     <!-- <footer class="footer">
-        <p> Copyright © 2020-<span>{{currentYear}}</span> Vignesh S</p>
+        <p> Copyright © 2020-<span>{{currentYear}}</span> Vignesh S</p> 
     </footer> -->
+    
 </div>
