--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,12 +15,12 @@
         <div class="container ">
             <div style="width: 100%; float: right;" class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav" style=" float: right;">
-                    <li class="nav-item p-1 rounded">
+                    <!-- <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#about"><i
                                 class='bx bx-user'></i> {{'header.about' | translate}}
                         </a>
-                    </li>
-                    <li class="nav-item p-1 rounded">
+                    </li> -->
+                    <!-- <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#skills"><i
                                 class='bx bx-briefcase-alt'></i>{{'header.skills' | translate}}</a>
                     </li>
@@ -39,7 +39,7 @@
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#contact"> <i
                                 class='bx bx-envelope'></i>{{'header.contactMe' | translate}}</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
