--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,28 +6,219 @@
 <!-- </section> -->
 
 <header id="home" class="header">
+ 
     <div class="overlay"></div>
     <div class="header-content container">
+        
         <h1 class="header-title">
             <span class="up">Hello...!!</span>
             <span class="down">I am Vignesh</span>
+        
         </h1>
+        <div class='wrap'>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+            <div class='tri'></div>
+          </div>
         <p class="header-subtitle" style="margin-top: 10px;">FULLSTACK WEB DEVELOPER</p>
-        <!-- <button class="btn btn-primary">Visit My Works</button> -->
+        
     </div>
-    <section class="sticky">
-        <div class="bubbles">
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-            <div class="bubble"></div>
-
-        </div>
-    </section>
+ 
 </header>
