--- a/src/styles.css
+++ b/src/styles.css
@@ -12265,3 +12265,12 @@ pre .code {
 .section-lg {
   padding: 100px 0 !important;
 }
+
+body {
+  font-size: 16px;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
