--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13781,6 +13781,10 @@ pre .code {
 .section-lg {
   padding: 100px 0 !important;
 }
+body {
+  font-size: 16px;
+}
+
 
 
 /*# sourceMappingURL=styles.css.map*/
