--- a/src/styles.css
+++ b/src/styles.css
@@ -12266,11 +12266,7 @@ pre .code {
   padding: 100px 0 !important;
 }
 
-body {
-  font-size: 16px;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); */
 
